--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,20 @@ body > nav ul,
   margin-right: auto;
 }
 
+.error{
+  border: 3px solid red;
+  background-color: rgba(255, 0, 0, 0.5);
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2rem;
+}
+
+#listeXML{
+  height: 300px;
+  overflow: auto;
+}
+
 @media screen and (min-width: 576px) {
   body > nav ul,
   body > main,
